syntax = "proto3";

option java_multiple_files = false;
option java_package = "com.ewolff.microservice.customer.grpc";
option java_outer_classname = "CustomerProto";

import "google/protobuf/empty.proto";

service CustomerService {
  rpc getCustomer(CustomerRequest) returns (CustomerResponse);
  rpc getCustomerList(google.protobuf.Empty) returns (CustomerListResponse);
}
message CustomerRequest {
  int64 customerId = 1;
}

message CustomerResponse {
  int64 customerId = 1;
  string name = 2;
  string firstname = 3;
  string email = 4;
  string street = 5;
  string city = 6;
}

message Customer {
  int64 customerId = 1;
  string firstname = 2;
  string name = 3;
  string email = 4;
  string street = 5;
  string city = 6;
}

message CustomerListResponse {
  repeated Customer customers = 1;
}

